--- a/style.css
+++ b/style.css
@@ -5,103 +5,108 @@
 *::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Press Start 2P", cursive;
-  font-size: 15px;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #000;
+  box-sizing: border-box;
 }
 
-.wrap {
+.btn {
+  font-family: inherit;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #fff;
+  cursor: pointer;
+}
+
+.section-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 30px;
   color: #fff;
 }
 
-.head {
+.section-head__btn {
+  padding: 10px 20px;
+}
+
+.section-title {
+  margin-top: 100px;
+  color: #fff;
+  text-align: center;
+}
+
+.section-title__heading {
+  font-size: 30px;
+  letter-spacing: 10px;
+  text-transform: capitalize;
+}
+
+.section-title__layout-wrap {
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.btn {
-  font-family: "Press Start 2P", cursive;
-  font-size: 20px;
-  padding: 10px 20px;
-  cursor: pointer;
-  border: none;
-}
-
-.btn-again {
-  margin-top: 20px;
-  margin-left: 30px;
-}
-
-.head-right {
-  margin-right: 30px;
-}
-
-.heading {
-  margin-top: 50px;
-  font-size: 30px;
-  text-align: center;
-}
-
-.box {
-  margin-top: 100px;
+.section-title__devider {
+  background-color: #fff;
   height: 10px;
-  background-color: #fff;
-  position: relative;
+  width: 100%;
 }
 
-.box span {
-  position: absolute;
-  top: 0;
-  left: 50%;
+.section-title__layout {
   font-size: 30px;
+  padding: 30px 50px;
   background-color: #fff;
-  padding: 20px 50px;
   color: #000;
-  transform: translate(-50%, calc(-50% + 5px));
 }
 
-.content {
+.section-content {
   margin-top: 200px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  color: #fff;
 }
 
-.content-item {
+.section-content__item-side {
   display: flex;
   flex-direction: column;
 }
 
-.content-left {
+.section-content__item-side:not(:last-child) {
+  margin-right: 200px;
   align-items: center;
 }
 
-#number {
-  width: 200px;
-  border: 3px solid #fff;
-  font-size: 50px;
-  background-color: transparent;
-  text-align: center;
-  padding: 20px 0;
-  color: #fff;
-  font-family: inherit;
-  text-align: center;
-}
-.btn-result {
-  margin-top: 50px;
-}
-#number:focus {
-  outline: none;
+.section-content__item-side div:not(:last-child) {
+  margin-bottom: 30px;
 }
 
-.content-right p:not(:last-child) {
-  margin-bottom: 30px;
+#number {
+  max-width: 150px;
+  font-family: inherit;
+  padding: 20px 10px;
+  font-size: 30px;
+  outline: none;
+  text-align: center;
+  background-color: transparent;
+  border: 3px solid #fff;
+  color: #fff;
+}
+
+.section-content__btn {
+  margin-top: 50px;
+  padding: 10px 20px;
 }
